Added a fisrt version of support of Linux USBTMC

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -60,6 +60,7 @@ if(UNIX)
   message("${PROJECT_SOURCE_DIR}/linux")
   set (SOURCES_FILES ${SOURCES_FILES} 
     linux/mdtDeviceFilePosix.cpp
+    linux/mdtUsbtmcFile.cpp
   )
 endif(UNIX)
 
