--- a/tests/mdtutils/CMakeLists.txt
+++ b/tests/mdtutils/CMakeLists.txt
@@ -11,7 +11,7 @@ set (HEADER_FILES
           mdtBufferTest.h
           mdtFrameTest.h
           mdtErrorTest.h
-          mdtDeviceFileTest.h
+          mdtPortTest.h
     )
 
 
@@ -21,7 +21,7 @@ set (SOURCES_FILES
           mdtBufferTest.cpp
           mdtFrameTest.cpp
           mdtErrorTest.cpp
-          mdtDeviceFileTest.cpp
+          mdtPortTest.cpp
           main.cpp
     )
 
