--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_definitions("-Wall -ansi -lm")
 # Enable Qt4 support
 set(QT_USE_QTTEST TRUE)
 set(QT_USE_QTSQL TRUE)
+set(QT_USE_QTNETWORK TRUE)
 find_package(Qt4 REQUIRED)
 include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
